feat: добавил поле status в модель статистики и обновил соответствующие эндпоинты и документацию
