# docs/swagger.json
@@ -1420,6 +1420,19 @@
                 }
             }
         },
+        "models.StatisticStatus": {
+            "type": "string",
+            "enum": [
+                "success",
+                "failed",
+                "aborted"
+            ],
+            "x-enum-varnames": [
+                "StatisticStatusSuccess",
+                "StatisticStatusFailed",
+                "StatisticStatusAborted"
+            ]
+        },
         "models.UserRole": {
             "type": "string",
             "enum": [
@@ -1436,6 +1449,7 @@
             "required": [
                 "exercise_id",
                 "level_id",
+                "status",
                 "user_id"
             ],
             "properties": {
@@ -1454,6 +1468,18 @@
                 },
                 "speed": {
                     "type": "number"
+                },
+                "status": {
+                    "enum": [
+                        "success",
+                        "failed",
+                        "aborted"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.StatisticStatus"
+                        }
+                    ]
                 },
                 "user_id": {
                     "type": "string"
@@ -1494,6 +1520,9 @@
                 },
                 "speed": {
                     "type": "number"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.StatisticStatus"
                 },
                 "user_id": {
                     "type": "string"
