# internal/domain/models/enums.go
@@ -6,3 +6,11 @@ const (
 	UserRoleAdmin UserRole = "admin"
 	UserRoleUser  UserRole = "user"
 )
+
+type StatisticStatus string
+
+const (
+	StatisticStatusSuccess StatisticStatus = "success"
+	StatisticStatusFailed  StatisticStatus = "failed"
+	StatisticStatusAborted StatisticStatus = "aborted"
+)
