# internal/infrastructure/http/handlers/statistics/dto.go
@@ -9,23 +9,25 @@ import (
 )
 
 type createStatisticRequest struct {
-	UserID          uuid.UUID `json:"user_id" validate:"required"`
-	LevelID         uuid.UUID `json:"level_id" validate:"required"`
-	ExerciseID      uuid.UUID `json:"exercise_id" validate:"required"`
-	MistakesPercent float64   `json:"mistakes_percent" validate:"gte=0"`
-	ExecutionTime   float64   `json:"execution_time" validate:"gt=0"`
-	Speed           float64   `json:"speed" validate:"gt=0"`
+	UserID          uuid.UUID              `json:"user_id" validate:"required"`
+	LevelID         uuid.UUID              `json:"level_id" validate:"required"`
+	ExerciseID      uuid.UUID              `json:"exercise_id" validate:"required"`
+	MistakesPercent float64                `json:"mistakes_percent" validate:"gte=0"`
+	ExecutionTime   float64                `json:"execution_time" validate:"gt=0"`
+	Speed           float64                `json:"speed" validate:"gt=0"`
+	Status          models.StatisticStatus `json:"status" validate:"required,oneof=success failed aborted"`
 }
 
 type statisticResponse struct {
-	ID              uuid.UUID `json:"id"`
-	UserID          uuid.UUID `json:"user_id"`
-	LevelID         uuid.UUID `json:"level_id"`
-	ExerciseID      uuid.UUID `json:"exercise_id"`
-	MistakesPercent float64   `json:"mistakes_percent"`
-	ExecutionTime   float64   `json:"execution_time"`
-	Speed           float64   `json:"speed"`
-	CreatedAt       time.Time `json:"created_at"`
+	ID              uuid.UUID              `json:"id"`
+	UserID          uuid.UUID              `json:"user_id"`
+	LevelID         uuid.UUID              `json:"level_id"`
+	ExerciseID      uuid.UUID              `json:"exercise_id"`
+	MistakesPercent float64                `json:"mistakes_percent"`
+	ExecutionTime   float64                `json:"execution_time"`
+	Speed           float64                `json:"speed"`
+	Status          models.StatisticStatus `json:"status"`
+	CreatedAt       time.Time              `json:"created_at"`
 }
 
 type statisticSingleResponse struct {
@@ -45,6 +47,7 @@ func toStatisticResponse(statistic *models.Statistic) statisticResponse {
 		MistakesPercent: statistic.MistakesPercent,
 		ExecutionTime:   statistic.ExecutionTime,
 		Speed:           statistic.Speed,
+		Status:          statistic.Status,
 		CreatedAt:       statistic.CreatedAt,
 	}
 }
